--- a/changelog.txt
+++ b/changelog.txt
@@ -1,13 +1,32 @@
 *** IranDargah Changelog ***
 
+= 2.0.5
+ * رفع ایراد جزئی
+
+= 2.0.4
+ * تغییر لوگوی ایران درگاه بر اساس سیستم طراحی جدید
+
+= 2.0.3
+ * اضافه کردن تکرار ارسال درخواست به ایران درگاه در صورت عدم موفقیت آمیز بودن ارسال در تکرار اول
+
+= 2.0.2
+ * رفع اشکالات جزئی
+  
+= 2.0.1
+ * اضافه شدن فایل های ترجمه
+ * رفع اشکال در بازگشت اطلاعات در حالت سندباکس
+
 = 2.0.0
- * New Schemas and class names
+ * تغییرات کلی در افزونه
+ * اضافه شدن انتخاب روش اتصال به درگاه
+ * اضافه شدن حالت سندباکس برای اتصال به درگاه
 
 = 1.1.1
- * Fix minor bugs
+ * تغییر در توضیحات
 
 = 1.1
- * Add orderId in sending request
+ * رفع ایرادات جزئی
 
 = 1.0
- * First Release
+ * انتشار نسخه اولیه افزونه ووکامرس درگاه پرداخت ایران درگاه
+
