change size of logo and added more details in order desc.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,18 @@
 *** IranDargah Changelog ***
+= 2.0.9
+ * تغییر سایز لوگو در صفحه پرداخت
+ * افزوده شدن نام محصول در توضیحات تراکنش
 
+= 2.0.8
+ * REST رفع مشکل اتصال به درگاه در حالت
+
+= 2.0.7
+ * رفع مشکل وریفای تراکنش در حالت سندباکس
+
+= 2.0.6
+ * رفع ایراد جزئی
+ * اصلاح نسخه بندی پلاگین
+  
 = 2.0.5
  * رفع ایراد جزئی
 
