fix translation of plugin - 2

--- a/languages/woocommerce-gateway-irandargah-fa_IR.po
+++ b/languages/woocommerce-gateway-irandargah-fa_IR.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: WooCommerce IranDargah Gateway\n"
 "POT-Creation-Date: 2022-01-17 16:46+0330\n"
-"PO-Revision-Date: 2022-01-17 16:46+0330\n"
+"PO-Revision-Date: 2022-01-19 12:52+0330\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fa_IR\n"
@@ -135,6 +135,8 @@ msgid ""
 "Choose Iranian Rial or Iranian Toman as your store currency in %1$sGeneral "
 "Settings%2$s to enable the IranDargah Gateway."
 msgstr ""
+"ارز مورد نظر خود را به صورت ریال یا تومان از %1$sتنظیمات کلی%2$s انتخاب کنید "
+"تا درگاه پرداخت فعال گردد."
 
 #: includes/class-wc-gateway-irandargah.php:264
 msgid "Error in connecting to gateway"
